--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -150,6 +150,7 @@ body .dropcap {
 }
 form {
     margin: 0 0 1.5em;
+    position: relative;
 }
 form label {
     display: block;
@@ -172,7 +173,7 @@ form input, form textarea, form select {
 form textarea {
     height: auto;
 }
-form select, form input[type="file"] {
+form input[type="file"] {
     height: 2.1em;
     line-height: 2.1em;
     margin-right: 0;
@@ -281,6 +282,7 @@ button, a.button, input[type=button], input[type=submit] {
     white-space:nowrap;
     width: auto;
     height: auto;
+    line-height: 1em;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
     border-radius: 0.3em;
@@ -603,6 +605,7 @@ form {
 }
 table.list {
     border-radius: 0;
+    margin-bottom: 1em;
 }
 table.list td, table.list th {
     vertical-align: middle;
@@ -627,6 +630,7 @@ table.list td, table.list th {
     white-space:nowrap;
     width: auto;
     height: auto;
+    line-height: 1em;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
     border-radius: 0.3em;
@@ -675,11 +679,22 @@ table.list td, table.list th {
     -moz-box-shadow: none;
     box-shadow: none;
 }
+td.preview {
+    text-align: right;
+    width: 0;
+}
 td.title h3 {
     margin-bottom: 0.3em;
 }
 td.title h3 a {
     font-size: 12px;
+}
+.child td.title h3 {
+    font-size: 14px;
+}
+td.designer {
+    text-align: center;
+    width: 0;
 }
 td.designer a {
     display: inline-block;
@@ -691,6 +706,7 @@ td.designer a {
     white-space:nowrap;
     width: auto;
     height: auto;
+    line-height: 1em;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
     border-radius: 0.3em;
@@ -740,6 +756,9 @@ td.designer a.disabled, td.designer a[disabled] {
     -moz-box-shadow: none;
     box-shadow: none;
 }
+.child td.designer a {
+    font-size: 1.0em;
+}
 td.actions, th.actions {
     text-align: right;
     width: 0;
@@ -757,6 +776,7 @@ td.actions a, th.actions a {
     white-space:nowrap;
     width: auto;
     height: auto;
+    line-height: 1em;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
     border-radius: 0.3em;
@@ -814,6 +834,7 @@ p.actions a {
     white-space:nowrap;
     width: auto;
     height: auto;
+    line-height: 1em;
     border: 1px solid #ccc;
     border-bottom-color: #bbb;
     border-radius: 0.3em;
