--- a/templater_modules/lpcandy/style/style.css
+++ b/templater_modules/lpcandy/style/style.css
@@ -53,18 +53,6 @@
 }
 
 
-@media (max-width:1199px) {
-    .header_4 .container .phone {
-        font-size: 24px !important;
-    }
-    .header_1 .container .phone_desc {
-        font-size: 15px !important;
-    }
-    .header_4 .container .desc {
-        font-size: 80% !important;
-    }
-}
-
 /* form */
 * {
     box-sizing: border-box;
@@ -415,7 +403,17 @@
     padding-top: 18px;
 }
 
-
+@media (max-width:1199px) {
+    .header_1 .container .phone_desc {
+        font-size: 15px !important;
+    }
+    .header_4 .container .phone {
+        font-size: 24px !important;
+    }    
+    .header_4 .container .desc {
+        font-size: 80% !important;
+    }
+}
 
 
 /* order */
@@ -1521,7 +1519,7 @@
 }
 
 .services_1 .item_list .item .btn_wrap{
-    margin:18px 20px 27px 20px
+    margin:18px 30px 20px
 }
 
 @media all and (max-width:1199px){
@@ -1573,18 +1571,20 @@
   width: 170px;
   height: 170px;
   margin-top: 5px;
-  border-radius: 85px;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.4);
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
 }
-.services_2 .item_list .item .img.hide_border {
+.services_2 .item.hide_shadow .img {
   box-shadow: none;
 }
-.services_2 .item_list .item .img.hide_round {
-  border-radius: 0;
+.services_2 .item_list.square .item .img {
+  border-radius: 0px;
+}
+.services_2 .item_list.circle .item .img {
+  border-radius: 85px;
 }
 .services_2 .item_list .item .item_data {
   float: left;
@@ -1629,83 +1629,120 @@
 
 
 
-.services_3 .item_list .item {
-    float: left;
-    margin: 30px 0;
-    padding: 0 15px;
-    width: 100%;
+.services_3 .container-fluid {
+  background: #f7f7f7;
+}
+.services_3 .container {
+  padding: 50px 0 60px 0;
+  font-family: Arial;
+}
+.services_3 h1.title {
+  margin: 10px 0 10px 0;
+  text-align: center;
+  color: #34383A;
+  font-size: 48px;
+  line-height: 56px;
+  font-family: "Open Sans", Arial;
+  font-weight: 400;
+}
+.services_3 .title_2 {
+  margin: 10px 0 25px 0;
+  text-align: center;
+  color: #5C5C5C;
+  font-size: 25px;
+  font-family: "Open Sans", Arial;
+  font-weight: 300;
 }
 .services_3 .item_list {
-    margin: 50px 5px 0;
+  margin: 0 5px;
+  margin-top: 50px;
 }
-.services_3 .item_list .item .img {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 250px;
-    margin: 5px auto 0;
-    position: relative;
-    width: 350px;
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    0px 0px 10px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 0.75);
+.services_3 .item_list .item {
+  float: left;
+  width: 100%;
+  margin: 30px 0;
+  padding: 0 15px;
 }
 .services_3 .item_list .item .img_data {
-    float: left;
-    width: 570px;
+  float: left;
+  width: 50%;
 }
 .services_3 .item_list .item .item_data {
-    float: left;
-    padding: 0 20px 0 0;
-    text-align: left;
-    width: 570px;
+  float: left;
+  width: 50%;
+  padding: 0 20px 0 0;
+  text-align: left;
+}
+.services_3 .item_list .item .img {
+  position: relative;
+  margin: 0 auto;
+  margin-top: 5px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+}
+.services_3 .item_list .item .img:before {
+  display: block;
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 50px;
+}
+.services_3 .item.hide_shadow .img:before {
+  display: none;
+}
+.services_3 .img_data.image_middle .img {
+  width: 350px;  
+  height: 250px;
+}
+.services_3 .img_data.image_middle .img:before {
+  background: url("../../lpcandy/assets/services/shadow.png") no-repeat;  
+}
+.services_3 .img_data.image_large .img {
+  width: 450px;
+  height: 350px;
+}
+.services_3 .img_data.image_large .img:before {
+  width: 450px;
+  height: 350px;
+  background: url("../../lpcandy/assets/services/shadow_450.png") no-repeat;  
 }
 .services_3 .item_list .item .name {
-    margin: 0 0 20px;
-    text-transform: uppercase;
+  margin: 0 0 20px 0;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: "Open Sans", Arial;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 .services_3 .item_list .item .desc {
-    margin: 20px 0 17px;
+  margin: 20px 0 17px 0;
+  color: #5C5C5C;
+  font-size: 14px;
+  line-height: 22px;
+  font-family: Arial;
 }
 .services_3 .item_list .item .price {
-    margin: 17px 0 27px;
+  margin: 17px 0 27px 0;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: Arial;
 }
 .services_3 .item_list .item .btn_note {
-    color: #5c5c5c;
-    font-family: Arial;
-    font-size: 12px;
-    margin: 27px 0 8px;
+  margin: 27px 0 8px 0;
+  color: #5C5C5C;
+  font-size: 12px;
+  font-family: Arial;
 }
 .services_3 .item_list .item .btn_wrap {
-    margin: 8px 0 20px;
+  margin: 8px 0 20px 0;
 }
 .services_3 .item_list .item .btn_wrap .btn {
-    display: inline-block;
-    -moz-user-select: none;
-    border-radius: 3px;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Arial;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1px;
-    text-align: center;
+  display: inline-block;
 }
-.services_3 .item_list .item .btn_wrap .btn div {
-    border-radius: 3px;
-    display: inline-block;
-    padding: 1px;
-    width: 100%;
-}
-.services_3 .item_list .item .btn_wrap .btn span {
-    text-shadow: 0 1px 0 black;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 5px 46px;
-    text-align: center;
-    width: auto;
-}
+
 
 
 .services_4 .item_list {
