--- a/templater_modules/lpcandy/style/style.css
+++ b/templater_modules/lpcandy/style/style.css
@@ -1124,6 +1124,8 @@
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 .benefits_1 .item_list .item .name {
   margin-bottom: 18px;
@@ -1188,6 +1190,8 @@
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 .benefits_2 .item_list .item .name {
   margin-bottom: 15px;
@@ -1265,6 +1269,8 @@
   background-repeat: no-repeat;
   background-size: 40px;
   background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 .benefits_3 .item_list .item .name {
   margin-bottom: 15px;
@@ -1321,11 +1327,11 @@
   position: relative;
   float: left;
   width: 50%;
-  padding: 40px 60px 40px 0px;
+  padding: 40px 50px 40px 10px;
 }
 .benefits_4 .item_list .item .img {
   top: 0px;
-  left: -135px;
+  left: 0px;
   width: 110px;
   height: 110px;
   border-radius: 55px;
@@ -1333,6 +1339,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 .benefits_4 .item_list .item .image_wrap {
   float: left;
@@ -1402,6 +1410,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  position: relative;
+  overflow: hidden;
 }
 .benefits_5 .item_list.hide_border .item .img {
   box-shadow: none;
@@ -1436,7 +1446,9 @@
     border-radius: 5px;
     padding: 7px 27px;
     text-decoration: none;
+    text-align: center;
 }
+
 
 .services_1 .container-fluid{
     background:#f7f7f7
@@ -1488,11 +1500,10 @@
     width:100%;
     height:250px;
     margin-bottom:20px;
-    overflow:hidden
-}
-
-.services_1 .item_list .item .img img{
-    width:100%
+    overflow:hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
 }
 
 .services_1 .item_list .item .name{
@@ -1519,15 +1530,17 @@
 }
 
 .services_1 .item_list .item .btn_wrap{
-    margin:18px 30px 20px
+    margin:0px 30px 20px;
+    display: inline-block;
 }
 
 @media all and (max-width:1199px){
-    .services_1 .item_list .item .img{
+    .services_1 .item_list .item .img_wrap{
         height:190px
     }
 
 }
+
 
 
 .services_2 .container-fluid {
@@ -1565,31 +1578,53 @@
   padding: 0 15px;
   text-align: left;
 }
-.services_2 .item_list .item .img {
-  display: block;
+.services_2 .item_list .item .img_data {
   float: left;
+}
+.services_2 .item_list .item:after {
+  clear: both;
+}
+.services_2 .item_list .item_data:after {
+  clear: both;
+}
+.services_2 .item_list .img_data:after {
+  clear: both;
+}
+.services_2 .item_list .item .img {
   width: 170px;
   height: 170px;
   margin-top: 5px;
+  border-radius: 85px;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.4);
   overflow: hidden;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+  position:relative;
+  overflow: hidden;
 }
-.services_2 .item.hide_shadow .img {
+.services_2 .item_list .item .img.hide_border {
   box-shadow: none;
 }
-.services_2 .item_list.square .item .img {
-  border-radius: 0px;
+.services_2 .item_list .item .img.hide_round {
+  border-radius: 0;
 }
-.services_2 .item_list.circle .item .img {
-  border-radius: 85px;
+@media all and (max-width: 1199px) {
+  .services_2 .item_list .item .img {
+    width: 140px;
+    height: 140px;
+  }
 }
 .services_2 .item_list .item .item_data {
   float: left;
   width: 380px;
   padding: 0 20px 0 30px;
+}
+@media all and (max-width: 1199px) {
+  .services_2 .item_list .item .item_data {
+    width: 295px;
+    padding: 0 0 0 25px;
+  }
 }
 .services_2 .item_list .item .name {
   margin: 0 0 20px 0;
@@ -1613,17 +1648,17 @@
   font-family: Arial;
 }
 .services_2 .item_list .item .btn_wrap {
-  margin: 22px 0 20px 0;
+  margin: 0px 0 20px 0;
+  display: inline-block;
 }
-@media all and (max-width: 1199px) {
-  .services_2 .item_list .item .item_data {
-    width: 295px;
-    padding: 0 0 0 25px;
-  }
-  .services_2 .item_list .item .img {
-    width: 140px;
-    height: 140px;
-  }
+.services_2 .item.hide_shadow .img_data .img {
+  box-shadow: none;
+}
+.services_2 .item_list.square .item .img_data .img {
+  border-radius: 0px;
+}
+.services_2 .item_list.circle .item .img_data .img {
+  border-radius: 85px;
 }
 
 
@@ -1666,12 +1701,23 @@
 .services_3 .item_list .item .img_data {
   float: left;
   width: 50%;
+  margin: 0;
+}
+@media all and (max-width: 1199px) {
+    .services_3 .item_list .item .img_data {
+      margin: 0 2% 0 0;
+    }
 }
 .services_3 .item_list .item .item_data {
   float: left;
   width: 50%;
   padding: 0 20px 0 0;
   text-align: left;
+}
+@media all and (max-width: 1199px) {
+    .services_3 .item_list .item .item_data {
+      width: 48%;
+    }
 }
 .services_3 .item_list .item .img {
   position: relative;
@@ -1705,8 +1751,6 @@
   height: 350px;
 }
 .services_3 .img_data.image_large .img:before {
-  width: 450px;
-  height: 350px;
   background: url("../../lpcandy/assets/services/shadow_450.png") no-repeat;  
 }
 .services_3 .item_list .item .name {
@@ -1738,201 +1782,271 @@
 }
 .services_3 .item_list .item .btn_wrap {
   margin: 8px 0 20px 0;
-}
-.services_3 .item_list .item .btn_wrap .btn {
   display: inline-block;
 }
 
 
 
+.services_4 .container-fluid {
+  background: #f7f7f7;
+}
+.services_4 .container {
+  padding: 50px 0 60px 0;
+  font-family: Arial;
+}
+.services_4 h1.title {
+  margin: 10px 0 10px 0;
+  text-align: center;
+  color: #34383A;
+  font-size: 48px;
+  line-height: 56px;
+  font-family: "Open Sans", Arial;
+  font-weight: 400;
+}
+.services_4 .title_2 {
+  margin: 10px 0 25px 0;
+  text-align: center;
+  color: #5C5C5C;
+  font-size: 25px;
+  font-family: "Open Sans", Arial;
+  font-weight: 300;
+}
 .services_4 .item_list {
-    margin: 55px 5px 0;
+  margin: 0 5px;
+  margin-top: 55px;
 }
 .services_4 .item_list .item {
-    float: left;
-    margin: 10px 0;
-    padding: 0 18px;
-    text-align: left;
-    width: 350px;
+  float: left;
+  width: 33.33%;
+  margin: 10px 0;
+  padding: 0 18px;
+  text-align: left;
 }
 .services_4 .item_list .item .ico {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 80px auto;
-    height: 80px;
-    margin: 20px;
-    overflow: hidden;
-    width: 80px;
+  width: 80px;
+  height: 80px;
+  margin: 20px 20px 20px 20px;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: 80px;
+  background-position: center center;
+  overflow: hidden;
+  position: relative;
 }
 .services_4 .item_list .item .name {
-    margin: 20px 20px 12px;
+  margin: 20px 20px 12px 20px;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: "Open Sans", Arial;
+  font-weight: 600;
 }
 .services_4 .item_list .item .desc {
-    margin: 12px 20px 16px;
+  margin: 12px 20px 16px 20px;
+  color: #5C5C5C;
+  font-size: 14px;
+  line-height: 22px;
+  font-family: Arial;
 }
 .services_4 .item_list .item .price {
-    margin: 16px 20px 18px;
+  margin: 16px 20px 18px 20px;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: Arial;
 }
 .services_4 .item_list .item .btn_wrap {
-    margin: 18px 20px 27px;
-}
-.services_4 .item_list .item .btn_wrap .btn {
-    display: inline-block;
-    -moz-user-select: none;
-    border-radius: 3px;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Arial;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1px;
-    text-align: center;
-}
-.services_4 .item_list .item .btn_wrap .btn div {
-    border-radius: 3px;
-    display: inline-block;
-    padding: 1px;
-    width: 100%;
-}
-.services_4 .item_list .item .btn_wrap .btn span {
-    text-shadow: 0 1px 0 black;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 5px 46px;
-    text-align: center;
-    width: auto;
+  margin: 18px 20px 27px 20px;
+  display: inline-block;
 }
 
 
+
+.services_5 .container-fluid {
+  background: #f7f7f7;
+}
+.services_5 .container {
+  padding: 50px 0 60px 0;
+  font-family: Arial;
+}
+.services_5 h1.title {
+  margin: 10px 0 10px 0;
+  text-align: center;
+  color: #34383A;
+  font-size: 48px;
+  line-height: 56px;
+  font-family: "Open Sans", Arial;
+  font-weight: 400;
+}
+.services_5 .title_2 {
+  margin: 10px 0 25px 0;
+  text-align: center;
+  color: #5C5C5C;
+  font-size: 25px;
+  font-family: "Open Sans", Arial;
+  font-weight: 300;
+}
 .services_5 .item_list {
-    margin: 55px 5px 0;
+  margin: 0 5px;
+  margin-top: 55px;
 }
 .services_5 .item_list .item {
-    float: left;
-    margin: 20px 0;
-    padding: 0 18px;
-    text-align: center;
-    width: 350px;
+  float: left;
+  width: 33.33%;
+  margin: 20px 0;
+  padding: 0 18px;
+  text-align: center;
 }
-.services_5 .item_list .item .img {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-radius: 125px;
-    height: 250px;
-    margin: 0 auto;
-    overflow: hidden;
-    width: 250px;
+.services_5 .item_list .item .img_wrap {
+  margin: 0 auto;
+}
+.services_5 .item_list .item .img {  
+  overflow: hidden;
+  margin: 0 auto;
+  border-radius: 125px;
+  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.1) inset;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  overflow: hidden;
+  position: relative;
+}
+.services_5 .item_list.square .item .img_wrap .img {
+  width: 300px;
+  height: 300px;
+  border-radius: 0px;
+}
+.services_5 .item_list.circle .item .img_wrap .img {
+  width: 250px;
+  height: 250px;
+  border-radius: 125px;
 }
 .services_5 .item_list .item .name {
-    margin: 25px 0 12px;
+  margin: 25px 0 12px 0;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: "Open Sans", Arial;
+  font-weight: 600;
 }
 .services_5 .item_list .item .desc {
-    margin: 12px 0 16px;
+  margin: 12px 0 16px 0;
+  color: #5C5C5C;
+  font-size: 14px;
+  line-height: 22px;
+  font-family: Arial;
 }
 .services_5 .item_list .item .price {
-    margin: 16px 0 18px;
+  margin: 16px 0 18px 0;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: Arial;
 }
 .services_5 .item_list .item .btn_wrap {
-    margin: 18px 20px 27px;
+  margin: 18px 0 27px 0;
+  display: inline-block;
 }
-.services_5 .item_list .item .btn_wrap .btn {
-    display: inline-block;
-    -moz-user-select: none;
-    border-radius: 3px;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Arial;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1px;
-    text-align: center;
-}
-.services_5 .item_list .item .btn_wrap .btn div {
-    border-radius: 3px;
-    display: inline-block;
-    padding: 1px;
-    width: 100%;
-}
-.services_5 .item_list .item .btn_wrap .btn span {
-    text-shadow: 0 1px 0 black;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 5px 46px;
-    text-align: center;
-    width: auto;
+@media all and (max-width: 1199px) {
+    .services_5 .item_list.square .item .img_wrap .img {
+      width: 250px;
+      height: 250px;
+      border-radius: 0px;
+    }
+    .services_5 .item_list.circle .item .img_wrap .img {
+      width: 200px;
+      height: 200px;
+      border-radius: 125px;
+    }
 }
 
 
+
+.services_6 .container-fluid {
+  background: #f7f7f7;
+}
+.services_6 .container {
+  padding: 50px 0 60px 0;
+  font-family: Arial;
+}
+.services_6 h1.title {
+  margin: 10px 0 10px 0;
+  text-align: center;
+  color: #34383A;
+  font-size: 48px;
+  line-height: 56px;
+  font-family: "Open Sans", Arial;
+  font-weight: 400;
+}
+.services_6 .title_2 {
+  margin: 10px 0 25px 0;
+  text-align: center;
+  color: #5C5C5C;
+  font-size: 25px;
+  font-family: "Open Sans", Arial;
+  font-weight: 300;
+}
+.services_6 .item_list {
+  margin: 0 5px;
+  margin-top: 50px;
+}
 .services_6 .item_list .item {
-    float: left;
-    margin: 20px 0;
-    padding: 0px 20px 0px 20px;
-    text-align: left;
-    width: 350px;
+  float: left;
+  width: 33.33%;
+  margin: 20px 0;
+  padding: 0 44px 0 43px;
+  text-align: left;
 }
-.services_6 .item_list .item .name {
-    color: #2b2b2b;
-    font-family: "Open Sans",Arial;
-    font-size: 20px;
-    font-weight: 600;
-    margin: 15px 0 25px;
-    text-align: left;
+@media all and (max-width: 1199px) {
+  .services_6 .item_list .item {
+    padding: 0 24px 0 23px;
+  }
 }
 .services_6 .item_list .item .img {
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 215px;
-    margin: 0 auto;
-    overflow: hidden;
-    width: 100%;
-    -webkit-box-shadow: 0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-    -moz-box-shadow:    0px 0px 5px 0px rgba(50, 50, 50, 0.75);
-    box-shadow:         0px 0px 5px 0px rgba(50, 50, 50, 0.75);
+  width: 100%;
+  height: 215px;
+  margin: 0 auto;
+  overflow: hidden;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
 }
-.services_6 .item_list .item .btn_wrap {
-    float: left;
-    margin: 30px 0 20px;
-    text-align: left;
-    width: 50%;
+@media all and (max-width: 1199px) {
+  .services_6 .item_list .item .img {
+    height: 185px;
+  }
 }
-.services_6 .item_list .item .btn_wrap .btn {
-    display: inline-block;
-    -moz-user-select: none;
-    border-radius: 3px;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Arial;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 1px;
-    text-align: center;
+.services_6 .item_list .item .name {
+  margin: 15px 0 25px 0;
+  color: #2B2B2B;
+  font-size: 20px;
+  font-family: "Open Sans", Arial;
+  font-weight: 600;
+  text-align: left;
 }
-.services_6 .item_list .item .btn_wrap .btn div {
-    border-radius: 3px;
-    display: inline-block;
-    padding: 1px;
-    width: 100%;
-}
-.services_6 .item_list .item .btn_wrap .btn span {
-    text-shadow: 0 1px 0 black;
-    border-radius: 3px;
-    display: inline-block;
-    padding: 5px 46px;
-    text-align: center;
-    width: auto;
+@media all and (max-width: 1199px) {
+  .services_6 .item_list .item .name {
+    font-size: 18px;
+  }
 }
 .services_6 .item_list .item .price {
-    float: left;
-    line-height: 34px;
-    margin: 30px 0 20px;
-    text-align: right;
-    width: 50%;
+  float: left;
+  width: 50%;
+  margin: 30px 0 20px 0;
+  text-align: right;
+  color: #2B2B2B;
+  font-size: 20px;
+  line-height: 28px;
+  font-family: Arial;
 }
+.services_6 .item_list .item .btn_wrap {
+  float: left;
+  width: 50%;
+  margin: 30px 0 20px 0;
+  text-align: left;
+  display: inline-block;
+}
+.services .btn_wrap a.btn_form {
+    width: 100%;
+}
+
+
 
 /* Why we */
 .why_we .container {
@@ -2138,7 +2252,7 @@
     left: 0px;
     bottom: 0px;
     width: auto;
-    height: 45px;
+    height: 75px;
     overflow: hidden;
     padding: 15px 17px;
     border-top: 1px solid #DDD;
@@ -2146,7 +2260,7 @@
     transition: all 0.3s ease-in-out 0s;
 }
 .gallery_2 .item_list .item .overlay:hover {
-    height: 100px;
+    height: 120px;
 }
 .gallery_2 .item_list .item .overlay .img_title {
     height: 22px;
